# target-elasticsearch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-opensearch.yml  docker-compose.yml  meltano.yml  pyproject.toml
.github/workflows/: ci_workflow.yml  release.yml
target_elasticsearch/: common.py  sinks.py  target.py
tests/: test_core.py  test_jsonpath_caching.py
tests/unit/: test_target.py
