[project]
name = "target-elasticsearch"
version = "1.0.2"
description = "`target-elasticsearch` is a singer target using the meltano SDK for targets"
authors = [{ name = "DT Mirizzi", email = "dtmirizzi@gmail.com" }]
requires-python = "<3.13,>=3.9.1"
license = "GPL-3.0"
keywords = [
    "elasticsearch",
    "ELT",
    "target",
    "meltano",
    "singer",
]
dependencies = [
    "requests>=2.25.1",
    "singer-sdk>=0.38.0",
    "elasticsearch>=8.14.0",
    "Jinja2>=3.1.2",
    "jsonpath-ng>=1.5.3",
    "types-python-dateutil>=2.8.19",
    "time-machine>=2.8.2",
    "typing-extensions>=4.4.0",
]

[project.scripts]
target-elasticsearch = "target_elasticsearch.target:TargetElasticsearch.cli"

[dependency-groups]
dev = [
    "pytest>=7.1.2,<8",
    "tox>=3.24.4,<4",
    "flake8>=4.0.1,<5",
    "black>=22.3.0,<23",
    "pydocstyle>=6.1.1,<7",
    "mypy>=0.960,<0.961",
    "isort>=5.10.1,<6",
    "pre-commit>=2.19.0,<3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1,<2"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_elasticsearch"

[tool.black]
line-length = 120
target-version = ['py39']
